--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 [dev-dependencies]
 diff = "0.1.0"
 polonius-parser = {version = "0.4.0", path = "polonius-parser" }
+datafrog = "*"
 
 [dependencies]
 rustc-hash = "1.0.0"
